--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng-context-menu",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "./dist/ng-context-menu-min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
